fix(card): action buttons spacing doesn't comply with design spec

--- a/variables/sizes.scss
+++ b/variables/sizes.scss
@@ -27,7 +27,7 @@ $card-header-icon-height: 28px;
 $card-header-icon-margin: 8px;
 $card-header-action-icon-size: 24px;
 $card-actions-action-padding: 13px 0;
-$card-actions-button-spacing: 6px;
+$card-actions-button-spacing: 25px;
 $card-margin-bottom: 1rem;
 
 /************************
